--- a/src/app/pages/students/student-list/student-list.component.css
+++ b/src/app/pages/students/student-list/student-list.component.css
@@ -53,4 +53,15 @@
     box-shadow: 2px 0 0 white, 4px 0 0 white, 4px -2px 0 white, 4px -4px 0 white, 4px -6px 0 white, 4px -8px 0 white;
     transform: rotate(45deg);
   }
+
+
+  #searchRoll, #searchSection {
+    width: 120px;
+    box-sizing: border-box;
+    border-radius: 60px;
+    padding-left: 9px;
+    font-size: 12px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+  }
   
