--- a/src/app/pages/students/student-list/student-list.component.html
+++ b/src/app/pages/students/student-list/student-list.component.html
@@ -6,13 +6,16 @@
               <div class="ibox-head">
                 <div class="ibox-title">All Students</div>
                 <div class="ibox-tools">
-                  <input type='text' placeholder='Type Roll' (keyup)='updateRollFilter($event)'/>
-                  <input type='text' placeholder='Type Section' (keyup)='updateSectionFilter($event)'/>
+
+                  <input type='text' id="searchRoll" placeholder='Type Roll' (keyup)='updateRollFilter($event)' class="ml-3"/>
+                  <input type='text' id="searchSection" placeholder='Type Section' (keyup)='updateSectionFilter($event)' class="ml-3"/>
+
                   <a class="ibox-collapse">
                     <i class="fa fa-refresh mr-1 text-success refresh-icon" aria-hidden="true"></i>
                     <!-- <i class="fa fa-times text-danger close-icon" aria-hidden="true"></i> -->
                     <i class="fa fa-angle-down arrow" aria-hidden="true"></i>
                   </a>
+
                 </div>
               </div>
     
@@ -76,9 +79,9 @@
                 <ngx-datatable-column name="Parents Name" prop="parentsName">
                 </ngx-datatable-column>
 
-                <ngx-datatable-column name="Class" [width]="70"></ngx-datatable-column>
+                <ngx-datatable-column name="Class" [width]="90"></ngx-datatable-column>
 
-                <ngx-datatable-column name="Section" [width]="90"></ngx-datatable-column>
+                <ngx-datatable-column name="Section" [width]="110"></ngx-datatable-column>
 
                 <ngx-datatable-column name="Address" prop="address" [canAutoResize]="true">
                     <!-- <ng-template let-row="row" ngx-datatable-cell-template>
